--- a/styles/internshipStyles.css
+++ b/styles/internshipStyles.css
@@ -88,7 +88,6 @@
     }
 
     .view-details-btn {
-        font-size: 0.9em;
-        padding: 8px 15px;
+        white-space: nowrap; /* Prevent text from wrapping it takes 2 lines in mobile view*/
     }
 }
