--- a/styles/projectStyles.css
+++ b/styles/projectStyles.css
@@ -89,7 +89,6 @@
     }
 
     .view-sample-btn {
-        font-size: 0.9em;
-        padding: 8px 15px;
+        white-space: nowrap; /* Prevent text from wrapping it takes 2 lines in mobile view*/
     }
 }
